# CSCI-4961-Open-Source-Software

./: index.md
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
labs/lab-01/: lab1.md  report.md
labs/lab-02/: Lab2.md
labs/lab-03/: lab3.md
labs/lab-04/: lab4.md
labs/lab-05/: CMakeLists.txt  Makefile  Makefile.sh  lab5.md
labs/lab-05/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step2/: CMakeLists.txt
labs/lab-05/Step4/MathFunctions/: CMakeLists.txt
labs/lab-05/Step5/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
labs/lab-05/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab-06/: Lab6.md
labs/lab-07/: Lab7.md  lab7_part1.py  lab7_part2.py  lab7_part3.py
labs/lab-08/: Lab8.md
labs/lab-09/: Lab9.md
